--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<title>Phone</title>
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel="stylesheet" href="./assets/tailwind.css">
-	<link rel='stylesheet' href='.global.css'>
+	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./bundle.css'>
 	<script src="./assets/fa.js" defer></script>
 	<script defer src='./bundle.js'></script>
